<resources>

    <string name="channel_name">Expiry Check Service Channel</string>
    <string name="channel_description">Notifications for expiry check service</string>
    <string name="app_name">MyKitchen</string>
    <string name="title_activity_main_kitchen">MainKitchenActivity</string>
    <string name="tab_text_1">Shopping</string>
    <string name="tab_text_2">Overview</string>
    <string name="tab_text_3">Notice</string>
    <string name="tab_text_4">Chat</string>
    <string name="tab_text_5">History</string>
    <string name="title_activity_kitchen_home">KitchenHomeActivity</string>
    <string name="login_welcome">Welcome to</string>
    <string name="login_app_name">MyKitchen</string>
    <string name="email_edit_text">Email</string>
    <string name="pwd_edit_text">Password</string>
    <string name="sign_in_btn">Sign In</string>
    <string name="create_acc_btn">Sign Up</string>
    <string name="switch_to_create_acc_btn">Create New Account</string>
    <string name="switch_to_sign_in_btn">Sign In With Existing Account</string>
    <string name="my_kitchens">My Kitchens</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_out_confirm_prompt">Are you sure you want to sign out?</string>
    <string name="cancel">Cancel</string>
    <string name="join_create_btn_desc">Join or Create New Kitchen</string>
    <string name="add_kitchen_lbl">Add a Kitchen</string>
    <string name="create_kitchen_tab">Create New</string>
    <string name="join_kitchen_tab">Join</string>
    <string name="kitchen_name_edit_text">Kitchen Name</string>
    <string name="manage_kitchen_lbl">Manage Kitchen</string>
    <string name="manage_kitchen_name_lbl">Kitchen Name</string>
    <string name="mute_notifications_switch_lbl">Mute Notifications</string>
    <string name="invite_residents_btn">Invite</string>
    <string name="manage_residents_lbl">Residents</string>
    <string name="manage_kitchen_actions_lbl">Actions</string>
    <string name="delete_kitchen_btn">Delete Kitchen</string>
    <string name="saved_kitchen_name_btn">Saved</string>
    <string name="save_name_kitchen_name_btn">Save Name</string>
    <string name="delete_kitchen_confirm_prompt">Are you sure you want to delete this kitchen? All data will be lost, current residents will no longer be able to access this kitchen, and this action cannot be undone.</string>
    <string name="delete">Delete</string>
    <string name="manage_kitchen_menu_item">Manage Kitchen</string>
    <string name="view_all_kitchens_menu_item">View All Kitchens</string>
    <string name="fill_in_one_field_toast">Please fill in the field.</string>
    <string name="fill_in_all_fields_toast">Please fill in all fields.</string>
    <string name="title_activity_kitchen_home_bottom_navigation">
        KitchenHomeBottomNavigationActivity
    </string>
    <string name="title_overview">Overview</string>
    <string name="title_cart">Cart</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_chat">Chat</string>
    <string name="chat_input_hint">Type a message...</string>
    <string name="title_history">History</string>
    <string name="add_btn">Add</string>
    <string name="rm_btn">Remove</string>
    <string name="profile_btn">Profile</string>
    <string name="appearance_settings_lbl">Appearance</string>
    <string name="night_mode_switch">Night Mode</string>
    <string name="account_settings_lbl">Account</string>
    <string name="add_food_lbl">Add Food</string>
    <string name="food_name">Food Name</string>
    <string name="bought_today_checkbox">Bought Today</string>
    <string name="dates_lbl">Dates</string>
    <string name="bought_on_lbl">Bought On</string>
    <string name="expires_on_lbl">Expires On</string>
    <string name="categories_lbl">Categories</string>
    <string name="food_gp_lbl">Food Group</string>
    <string name="storage_loc_lbl">Storage Location</string>
    <string name="quantity">Quantity</string>
    <string name="invalid_quantity_toast">Please fill in a positive number in the quantity field.</string>
    <string name="no_kitchens_lbl">No kitchens found.</string>
    <string name="generic_error">An error occurred. Please try again later.</string>
    <string name="remove_food_lbl">Use Food</string>
    <string name="use_later_lbl">Use Later</string>
    <string name="use_on_lbl">Use On</string>
    <string name="sign_out_dialog_title">Sign Out?</string>
    <string name="delete_kitchen_dialog_title">Delete Kitchen?</string>
    <string name="select_bought_date_title">Select Bought Date</string>
    <string name="select_expiry_date_title">Select Expiry Date</string>
    <string name="select_use_date_title">Select Use Date</string>
    <string name="select_date_default_title">Select Date</string>
    <string name="pending_list_lbl">Pending</string>
    <string name="banned_residents_lbl">Banned Residents</string>
    <string name="no_pending_requests_lbl">No pending join requests found.</string>
    <string name="no_banned_residents_lbl">No banned residents found.</string>
    <string name="leave_kitchen_btn">Leave Kitchen</string>
    <string name="leave_kitchen_dialog_title">Leave Kitchen?</string>
    <string name="leave_kitchen_confirm_prompt">Are you sure you want to leave this kitchen? If you want to rejoin, the owner will need to re-accept your join request.</string>
    <string name="leave_btn">Leave</string>
    <string name="repeat_after">Repeat After (Days)</string>
    <string name="invalid_repeat_after_days_toast">Please fill in a positive number in the Repeat After field</string>string>
    <string name="days">days</string>
    <string name="username_edit_text_hint">Username</string>
    <string name="change_profile_picture_btn">Change Profile Picture</string>
    <string name="discard_btn">Discard</string>
    <string name="save_btn">Save</string>
    <string name="search_edit_text">Search</string>
    <string name="kitchen_code">Kitchen Code</string>
    <string name="expires_after_lbl">Days to Expire</string>
    <string name = "invalid_expires_after_toast">Please fill in a positive number in the expires after field</string>
    <string name = "confirm">Confirm</string>
    <string name="save_error">"Could not save. Please try again later."</string>
    <string name="create_kitchen_success">"Kitchen Created!"</string>
    <string name="save_pfp_success">Saved Profile Picture!</string>
    <string name="save_username_success">Saved Username!</string>
    <string name="request_join_kitchen_success">Request sent!</string>
    <string name="already_joined_message">"You are already a resident in this kitchen."</string>
    <string name="already_requested_message">"You have already sent a request to join this kitchen."</string>
    <plurals name="residents">
        <item quantity="one">Resident</item>
        <item quantity="other">Residents</item>
    </plurals>
    <plurals name="food_items">
        <item quantity="one">Food Item</item>
        <item quantity="other">Food Items</item>
    </plurals>
    <string name="on_removed_notification_message">You are removed from the kitchen. Please contact the owner if you feel unjust! </string>
    <string name="on_banned_notification_message">You are banned from the kitchen. How dare the owner!</string>
    <string name="on_pending_accepted_notification_message">One of your applications to enter a kitchen is approved.</string>
    <string name="add_schedule_lbl">Add Schedule</string>
    <string name="set_repeating">Set Repeating</string>
    <string name="add_on_lbl">Add On Date</string>
    <string name="greater_than_two_digits_notifs">99+</string>
    <string name="non_negative_toast">Please fill in a non-negative number in the quantity field</string>
    <string name="select_new_quantity">Select new quantity</string>
    <string name="select_storage_location">Select storage location</string>
    <string name="current_location">"Current Location: "</string>
    <string name="select_new_expiry_time">Select new expiry time</string>
    <string name="current_expiry">"Current expiry time: "</string>
    <string name="create_acc_success">Welcome %1$s!</string>
    <string name="no_notifications_found_lbl">No notifications found.</string>
    <string name="no_history_found_lbl">No history found.</string>
    <string name="add_all_cart_item_btn">Add All</string>
    <string name="me_lbl">(Me)</string>
    <string name="no_schedules_found_lbl">No schedules found.</string>
    <string name="other_food_category">Other</string>
    <string name="edit_food_lbl">Edit Food</string>
    <string name="edit_btn">Edit</string>
    <string name="use_item_menu_item">Use Item</string>
    <string name="edit_item_menu_item">Edit Item</string>
    <string name="view_schedules_menu_item">View Schedules</string>
    <string name="add_preset_food_lbl">Add Preset Food</string>
    <string name="remove_resident_menu_item">Kick Resident</string>
    <string name="ban_resident_menu_item">Ban Resident</string>
    <string name="accept_request_menu_item">Accept Request</string>
    <string name="ignore_request_menu_item">Ignore Request</string>
    <string name="unban_resident_menu_item">Unban Resident</string>
    <string name="delete_error">Could not delete. Please try again later.</string>
    <string name="remove_user_error">Could not remove user. Please try again later.</string>
    <string name="remove_user_success">Kicked, see ya!</string>
    <string name="ban_user_error">Could not ban user. Please try again later.</string>
    <string name="ban_user_success">Banned, goodbye!</string>
    <string name="accept_user_error">Cannot accept this user. Please try again later.</string>
    <string name="accept_user_success">Accepted!</string>
    <string name="reject_user_error">Cannot ignore this user. Please try again later.</string>
    <string name="reject_user_success">Ignored!</string>
    <string name="missing_date">Please select a date</string>
    <string name="expiry_reference_lbl">Expiry Reference</string>
    <string name="view_expiry_reference_btn">View Expiry Reference</string>>
</resources>