<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_overview"
        android:icon="@drawable/ic_kitchen"
        android:title="@string/title_overview" />

    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/ic_shopping_cart_24px"
        android:title="@string/title_cart" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/baseline_notifications_none_24"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/baseline_chat_bubble_outline_24"
        android:title="@string/title_chat" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_history_24dp"
        android:title="@string/title_history" />

</menu>