<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.other.managekitchen.ManageKitchenActivity">

        <TextView
            android:id="@+id/manage_kitchen_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="28dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/manage_kitchen_lbl"
            android:textSize="34sp"
            app:layout_constraintBottom_toTopOf="@+id/manage_kitchen_name_edit_text_container"
            app:layout_constraintStart_toStartOf="@id/main"
            app:layout_constraintTop_toTopOf="@id/main"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/manage_kitchen_name_edit_text_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="38dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="38dp"
            android:ems="10"
            android:hint="@string/kitchen_name_edit_text"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:layout_constraintBottom_toTopOf="@+id/save_kitchen_name_btn"
            app:layout_constraintEnd_toEndOf="@id/main"
            app:layout_constraintStart_toStartOf="@id/main"
            app:layout_constraintTop_toBottomOf="@+id/manage_kitchen_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/manage_kitchen_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/save_kitchen_name_btn"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="48dp"
            android:text="@string/save_btn"
            app:cornerRadius="10dp"
            app:icon="@drawable/ic_accept_user_24px"
            app:layout_constraintBottom_toTopOf="@+id/residents_lbl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/kitchen_name_discard_btn"
            app:layout_constraintTop_toBottomOf="@+id/manage_kitchen_name_edit_text_container"
            app:layout_constraintHorizontal_chainStyle="packed"/>

        <TextView
            android:id="@+id/residents_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/manage_residents_lbl"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/active_kitchen_residents_list_view"
            app:layout_constraintStart_toStartOf="@id/main"
            app:layout_constraintTop_toBottomOf="@+id/save_kitchen_name_btn" />

        <com.aaronnguyen.mykitchen.ui.other.managekitchen.AutoHeightAdjustingListView
            android:id="@+id/active_kitchen_residents_list_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/invite_residents_btn"
            app:layout_constraintEnd_toEndOf="@id/main"
            app:layout_constraintStart_toStartOf="@id/main"
            app:layout_constraintTop_toBottomOf="@+id/residents_lbl" />

        <Button
            android:id="@+id/invite_residents_btn"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="48dp"
            android:text="@string/invite_residents_btn"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toTopOf="@+id/pending_lbl"
            app:layout_constraintEnd_toEndOf="@id/main"
            app:layout_constraintStart_toStartOf="@id/main"
            app:layout_constraintTop_toBottomOf="@+id/active_kitchen_residents_list_view" />

        <TextView
            android:id="@+id/pending_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/pending_list_lbl"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/no_pending_reqs_lbl"
            app:layout_constraintStart_toStartOf="@id/main"
            app:layout_constraintTop_toBottomOf="@+id/invite_residents_btn" />

        <com.aaronnguyen.mykitchen.ui.other.managekitchen.AutoHeightAdjustingListView
            android:id="@+id/pending_kitchen_residents_list_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/banned_residents_lbl"
            app:layout_constraintEnd_toEndOf="@id/main"
            app:layout_constraintStart_toStartOf="@id/main"
            app:layout_constraintTop_toBottomOf="@+id/no_pending_reqs_lbl" />

        <TextView
            android:id="@+id/banned_residents_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/banned_residents_lbl"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/no_banned_residents_lbl"
            app:layout_constraintStart_toStartOf="@id/main"
            app:layout_constraintTop_toBottomOf="@+id/pending_kitchen_residents_list_view" />

        <com.aaronnguyen.mykitchen.ui.other.managekitchen.AutoHeightAdjustingListView
            android:id="@+id/banned_kitchen_residents_list_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="@id/main"
            app:layout_constraintStart_toStartOf="@id/main"
            app:layout_constraintTop_toBottomOf="@+id/no_banned_residents_lbl" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/manage_kitchen_actions_lbl"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/mute_kitchen_notifications_switch"
            app:layout_constraintStart_toStartOf="@id/main"
            app:layout_constraintTop_toBottomOf="@+id/banned_kitchen_residents_list_view" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/mute_kitchen_notifications_switch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="48dp"
            android:text="@string/mute_notifications_switch_lbl"
            app:layout_constraintBottom_toTopOf="@+id/delete_kitchen_btn"
            app:layout_constraintEnd_toEndOf="@id/main"
            app:layout_constraintStart_toStartOf="@id/main"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <Button
            android:id="@+id/delete_kitchen_btn"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="48dp"
            android:text="@string/delete_kitchen_btn"
            android:textColor="@android:color/holo_red_light"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="@id/main"
            app:layout_constraintStart_toStartOf="@id/main"
            app:layout_constraintTop_toBottomOf="@+id/mute_kitchen_notifications_switch" />

        <TextView
            android:id="@+id/no_pending_reqs_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/no_pending_requests_lbl"
            app:layout_constraintBottom_toTopOf="@+id/pending_kitchen_residents_list_view"
            app:layout_constraintEnd_toEndOf="@id/main"
            app:layout_constraintStart_toStartOf="@id/main"
            app:layout_constraintTop_toBottomOf="@+id/pending_lbl" />

        <TextView
            android:id="@+id/no_banned_residents_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/no_banned_residents_lbl"
            app:layout_constraintBottom_toTopOf="@+id/banned_kitchen_residents_list_view"
            app:layout_constraintEnd_toEndOf="@id/main"
            app:layout_constraintStart_toStartOf="@id/main"
            app:layout_constraintTop_toBottomOf="@+id/banned_residents_lbl" />

        <Button
            android:id="@+id/kitchen_name_discard_btn"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="4dp"
            android:fontFamily="sans-serif"
            android:text="@string/discard_btn"
            app:cornerRadius="10dp"
            app:icon="@drawable/ic_reject_user_24px"
            app:layout_constraintEnd_toStartOf="@+id/save_kitchen_name_btn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/save_kitchen_name_btn" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>