<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/create_join_kitchen_tabs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/join_create_kitchen_lbl">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/create_kitchen_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_kitchen_tab"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="82dp" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/join_kitchen_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/join_kitchen_tab"
            tools:layout_editor_absoluteX="143dp"
            tools:layout_editor_absoluteY="160dp" />

    </com.google.android.material.tabs.TabLayout>

    <TextView
        android:id="@+id/join_create_kitchen_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/add_kitchen_lbl"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/kitchen_name_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/kitchen_name_edit_text"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_join_kitchen_tabs"
        app:layout_constraintVertical_chainStyle="packed" />

</androidx.constraintlayout.widget.ConstraintLayout>